--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,7 +31,7 @@ screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
 screen/opengl_debug=false
-launcher_icons/xxxhdpi_192x192=""
+launcher_icons/xxxhdpi_192x192="res://Hupe-lineart.png"
 launcher_icons/xxhdpi_144x144=""
 launcher_icons/xhdpi_96x96=""
 launcher_icons/hdpi_72x72=""
@@ -195,3 +195,26 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.1]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
